data/forge_javadoc/1.7.10/raw/net/minecraft/entity/EntityMinecartCommandBlock.md
---
title: "EntityMinecartCommandBlock"
description: "public class EntityMinecartCommandBlock extends EntityMinecart"
package: "net/minecraft/entity"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/EntityMinecartCommandBlock.html"
sourceType: javadoc
---

# EntityMinecartCommandBlock

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.item.EntityMinecart → net.minecraft.entity.EntityMinecartCommandBlock

## Class signature

```java
public class EntityMinecartCommandBlock extends EntityMinecart
```

## Methods

- `protected void entityInit()`
- `void func_145781_i(int p_145781_1_)`
- `Block func_145817_o()`
- `CommandBlockLogic func_145822_e()`
- `int getMinecartType()`
- `boolean interactFirst(EntityPlayer p_130002_1_)`
- `void onActivatorRailPass(int p_96095_1_, int p_96095_2_, int p_96095_3_, boolean p_96095_4_)`
- `protected void readEntityFromNBT(NBTTagCompound p_70037_1_)`
- `protected void writeEntityToNBT(NBTTagCompound p_70014_1_)`

## Fields

- `EntityMinecartCommandBlock`
- `EntityMinecartCommandBlock`
